--- a/estilos.css
+++ b/estilos.css
@@ -616,3 +616,9 @@ body {
     background: black;
     color: yellow;
 }
+
+.app-container {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
